# neurx

./: .editorconfig  .gitignore  Cargo.toml  README.md
controller/src/: main.rs
kicad/: neurx.kicad_pcb  neurx.kicad_prl  neurx.kicad_pro  neurx.kicad_sch
layout/: neursx.json  neurx.keys
src/: keyboard.rs  keycode.rs  main.rs  matrix.rs
