[package]
name = "neurx-keyboard"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.3.0", features = ["rp2040"] }
embassy-usb = "0.3.0"
